new changes(bikash)

--- a/wineprediction_modeling.ipynb
+++ b/wineprediction_modeling.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 111,
+      "execution_count": 339,
       "metadata": {
         "id": "oABO9igqsGRq"
       },
@@ -21,7 +21,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 112,
+      "execution_count": 340,
       "metadata": {
         "id": "Bs967pYEsP-E"
       },
@@ -32,7 +32,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 113,
+      "execution_count": 341,
       "metadata": {},
       "outputs": [
         {
@@ -68,7 +68,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 114,
+      "execution_count": 342,
       "metadata": {},
       "outputs": [
         {
@@ -98,7 +98,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 115,
+      "execution_count": 343,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -107,7 +107,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 116,
+      "execution_count": 344,
       "metadata": {},
       "outputs": [
         {
@@ -369,7 +369,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 117,
+      "execution_count": 345,
       "metadata": {},
       "outputs": [
         {
@@ -378,7 +378,7 @@
               "(1143, 12)"
             ]
           },
-          "execution_count": 117,
+          "execution_count": 345,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -389,7 +389,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 118,
+      "execution_count": 346,
       "metadata": {},
       "outputs": [
         {
@@ -409,7 +409,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 119,
+      "execution_count": 347,
       "metadata": {},
       "outputs": [
         {
@@ -431,44 +431,40 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 120,
+      "execution_count": 348,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Split the dataset into features (X) and target variable (y)\n",
-        "X = wine.drop(columns=\"quality\")\n",
-        "y = wine[\"quality\"]"
+        "# Binarize the 'quality' variable\n",
+        "threshold = 5  # Define threshold for 'good' quality\n",
+        "wine['quality_binary'] = wine['quality'].apply(lambda x: 1 if x > threshold else 0)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 121,
+      "execution_count": 349,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[0 1]\n"
+          ]
+        }
+      ],
       "source": [
-        "from sklearn.preprocessing import MinMaxScaler\n",
+        "# Separate features (X) and target variable (y)\n",
+        "X = wine.drop(columns=['quality', 'quality_binary'])\n",
+        "y = wine['quality_binary']\n",
         "\n",
-        "# Instantiate the MinMaxScaler\n",
-        "scaler = MinMaxScaler()\n",
-        "\n",
-        "# Rescale the 'quality' values\n",
-        "wine['quality'] = scaler.fit_transform(wine['quality'].values.reshape(-1, 1))"
+        "# Check if all values in 'quality_binary' are numeric\n",
+        "print(wine['quality_binary'].unique())"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 122,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "from sklearn.model_selection import train_test_split\n",
-        "from sklearn.linear_model import LinearRegression\n",
-        "from sklearn.metrics import mean_squared_error"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 123,
+      "execution_count": 350,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -478,7 +474,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 124,
+      "execution_count": 351,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        "from sklearn.neighbors import KNeighborsClassifier\n",
+        "from sklearn.tree import DecisionTreeClassifier\n",
+        "from sklearn.metrics import confusion_matrix, accuracy_score,f1_score"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 353,
       "metadata": {},
       "outputs": [
         {
@@ -491,7 +499,7 @@
             "Model:                            OLS   Adj. R-squared:                  0.368\n",
             "Method:                 Least Squares   F-statistic:                     61.49\n",
             "Date:                Wed, 20 Mar 2024   Prob (F-statistic):          4.26e-107\n",
-            "Time:                        15:52:04   Log-Likelihood:                -1106.7\n",
+            "Time:                        19:17:47   Log-Likelihood:                -1106.7\n",
             "No. Observations:                1143   AIC:                             2237.\n",
             "Df Residuals:                    1131   BIC:                             2298.\n",
             "Df Model:                          11                                         \n",
@@ -526,26 +534,57 @@
         }
       ],
       "source": [
-        "# Add constant term to independent variables\n",
+        "# Assuming 'quality' is the target variable\n",
+        "X = wine.drop(columns=['quality', 'quality_binary'])  # Features\n",
+        "y = wine['quality']  # Target variable\n",
+        "\n",
+        "# Add a constant term to the features\n",
         "X = sm.add_constant(X)\n",
         "\n",
         "# Fit linear regression model\n",
         "model = sm.OLS(y, X).fit()\n",
         "\n",
         "# Print regression summary\n",
-        "print(model.summary())\n"
+        "print(model.summary())"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 125,
+      "execution_count": 352,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "Accuracy: 0.6812227074235808\n",
+            "\n",
+            "Confusion Matrix:\n",
+            " [[66 36]\n",
+            " [37 90]]\n"
+          ]
+        }
+      ],
       "source": [
-        "from sklearn.ensemble import RandomForestClassifier\n",
-        "from sklearn.neighbors import KNeighborsClassifier\n",
-        "from sklearn.tree import DecisionTreeClassifier\n",
-        "from sklearn.metrics import confusion_matrix, accuracy_score,f1_score"
+        "# Create a Decision Tree Classifier using Gini index\n",
+        "clf_gini = DecisionTreeClassifier(criterion='gini', random_state=42)\n",
+        "\n",
+        "# Train the model\n",
+        "clf_gini.fit(X_train, y_train)\n",
+        "\n",
+        "# Predict the responses for test dataset\n",
+        "y_pred_dt = clf_gini.predict(X_test)\n",
+        "\n",
+        "# Calculate accuracy\n",
+        "accuracy = accuracy_score(y_test, y_pred_dt)\n",
+        "\n",
+        "# Calculate confusion matrix\n",
+        "conf_matrix = confusion_matrix(y_test, y_pred_dt)\n",
+        "\n",
+        "# Print accuracy and confusion matrix\n",
+        "print(\"\\nAccuracy:\", accuracy)\n",
+        "print(\"\\nConfusion Matrix:\\n\", conf_matrix)"
       ]
     }
   ],
