Random forest classifier (added) Bikash

--- a/wineprediction_modeling.ipynb
+++ b/wineprediction_modeling.ipynb
@@ -586,6 +586,52 @@
         "print(\"\\nAccuracy:\", accuracy)\n",
         "print(\"\\nConfusion Matrix:\\n\", conf_matrix)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 354,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "Accuracy: 0.7729257641921398\n",
+            "\n",
+            "Confusion Matrix:\n",
+            " [[78 24]\n",
+            " [28 99]]\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Assuming 'quality_binary' is the target variable\n",
+        "X = wine.drop(columns=['quality', 'quality_binary'])  # Features\n",
+        "y = wine['quality_binary']  # Target variable\n",
+        "\n",
+        "# Split the dataset into training and testing sets\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+        "\n",
+        "# Create a Random Forest Classifier\n",
+        "clf_rf = RandomForestClassifier(n_estimators=100, random_state=42)\n",
+        "\n",
+        "# Train the model\n",
+        "clf_rf.fit(X_train, y_train)\n",
+        "\n",
+        "# Predict the responses for test dataset\n",
+        "y_pred_rf = clf_rf.predict(X_test)\n",
+        "\n",
+        "# Calculate accuracy\n",
+        "accuracy_rf = accuracy_score(y_test, y_pred_rf)\n",
+        "\n",
+        "# Calculate confusion matrix\n",
+        "conf_matrix_rf = confusion_matrix(y_test, y_pred_rf)\n",
+        "\n",
+        "# Print accuracy and confusion matrix\n",
+        "print(\"\\nAccuracy:\", accuracy_rf)\n",
+        "print(\"\\nConfusion Matrix:\\n\", conf_matrix_rf)"
+      ]
     }
   ],
   "metadata": {
